--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "uglify-js": "~2.3.6",
     "stylus": "~0.34.1",
     "expect.js": "~0.2.0",
-    "express": "latest",
+    "express": "~3.4.4",
     "flour": "~0.5.5",
     "nedb": "~0.8.5"
   },
